# django-postgresql-dag

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README  README.md  SECURITY.md  bandit.yml  docker-compose.yaml  manage.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  setup.py
.github/workflows/: django.yml
django_dag_postgresql/: models.py
django_postgresql_dag/: exceptions.py  models.py  query_builders.py  query_strings.py  transformations.py  urls.py  utils.py
docs/: conf.py  configuration.md  debug.md  edge-reference.md  filtering.md  index.md  index.rst  methods.md  methods.rst  node-reference.md  paths-and-algorithms.md  quickstart.md  quickstart.rst  requirements.txt  transformations.md  transformations.rst  tutorial.md  understanding-dags.md
src/django_postgresql_dag/: __init__.py  debug.py  exceptions.py  models.py  query_builders.py  signals.py  transformations.py  utils.py
tests/: apps.py  conftest.py  dag_output.py  helpers.py  manage.py  models.py  settings.py  test.py  test_all.py  test_all_paths.py  test_connected_graph.py  test_critical_path.py  test_depth_annotation.py  test_graph_hashing.py  test_lca.py  test_managers_and_predicates.py  test_mutations.py  test_paths.py  test_query_filtering.py  test_query_logging.py  test_signals.py  test_topological_sort.py  test_transformations.py  test_transitive_reduction.py  test_traversal.py  test_weighted_path.py
tests/migrations/: 0001_initial.py  0002_auto_20201101_1652.py
tests/testapp/: admin.py  asgi.py  models.py  urls.py  wsgi.py
tests/testapp/migrations/: 0001_initial.py  0002_networkedge_networknode_networkedge_child_and_more.py  0003_fieldtestmodel.py  0004_fieldtestmodel_nullable_dt.py  0005_add_weight_to_networkedge.py
